--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <div class="main__container container">
             <h1>Assalomu alaykum!</h1>
             <h2>Oson masalalar:</h2>
+            <h2 id="searchTitile">Shu kardlar mavjud:</h2>
+            <div id="notFound" style="display: none;">
+                <h4>Siz qidirib turgan card bu yerda mavjud emas!</h4>
+                <img src="images/not_found.png" alt="not found" width="200px">
+            </div>
             <div class="card_main">
                 <div class="card">
                     <h3><span style="color: #fff;"> 1-oson.</span><br> Funksiya yozing, bu funksiya berilgan sonning kvadratini qaytarsin.</h3>
