--- a/index.html
+++ b/index.html
@@ -357,6 +357,34 @@
                     </div>
                 </div>
             </div>
+            <h2>Qo`shimcha vazifa:</h2>
+            <div class="card_main">
+                <div class="card">
+                    <h3><span style="color: #fff;"> 1-qo`shimcha.</span><br> Funksiya yozing, bu funksiya massivdagi har bir sonni ikki baravar qilib qaytarsin.</h3>
+                    <input id="inputNum1-addition" type="number" required placeholder="Sonni kiriting:">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num1-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result1Addition" readonly></textarea>
+                        <button id="clear1add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 2-qo`shimcha.</span><br> Funksiya yozing, bu funksiya berilgan massiv ichidan ma'lum bir qiymatni o'chirib, yangi massivni qaytarsin.</h3>
+                    <input id="inputNum2-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <input id="valueToRemove" type="text" required placeholder="O'chirish kerak bo'lgan qiymatni kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num2-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result2Addition" readonly></textarea>
+                        <button id="clear2Addition">Clear</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
