--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="card_main">
                 <div class="card">
                     <h3><span style="color: #fff;"> 1-qo`shimcha.</span><br> Funksiya yozing, bu funksiya massivdagi har bir sonni ikki baravar qilib qaytarsin.</h3>
-                    <input id="inputNum1-addition" type="number" required placeholder="Sonni kiriting:">
+                    <input id="inputNum1-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
                     <div class="result_text">
                         <p>Result:</p>
                         <button id="num1-addition">Ko`rish</button>
@@ -384,6 +384,103 @@
                         <button id="clear2Addition">Clear</button>
                     </div>
                 </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 3-qo`shimcha.</span><br> Funksiya yozing, bu funksiya massiv ichidagi elementlarni tartiblasin (katta-kichik tartibda).</h3>
+                    <input id="inputNum3-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num3-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result3Addition" readonly></textarea>
+                        <button id="clear3add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 4-qo`shimcha.</span><br>Funksiya yozing, bu funksiya massiv ichidan eng kichik va eng katta sonni topib, natijalarni massiv ko'rinishida qaytarsin.</h3>
+                    <input id="inputNum4-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num4-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result4Addition" readonly></textarea>
+                        <button id="clear4add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 5-qo`shimcha.</span><br>Funksiya yozing, bu funksiya massiv ichidagi barcha sonlarning o'rtacha qiymatini qaytarsin.</h3>
+                    <input id="inputNum5-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num5-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result5Addition" readonly></textarea>
+                        <button id="clear5add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 6-qo`shimcha.</span><br> Funksiya yozing, bu funksiya massivning har bir elementini string sifatida qaytarsin.</h3>
+                    <input id="inputNum6-addition" type="text" required placeholder="Qiymatni kiriting:">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num6-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result6Addition" readonly></textarea>
+                        <button id="clear6add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 7-qo`shimcha.</span><br> Funksiya yozing, bu funksiya berilgan massiv ichidagi barcha elementlarni ikki qismga ajratsin: juft va toq elementlar, va yangi massivlar qaytarsin.</h3>
+                    <input id="inputNum7-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num7-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result7Addition" readonly></textarea>
+                        <button id="clear7add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 8-qo`shimcha.</span><br> Funksiya yozing, bu funksiya berilgan massiv ichidagi raqamlarni kichikdan kattaga qarab tartiblasin va yangi massivni qaytarsin.</h3>
+                    <input id="inputNum8-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num8-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result8Addition" readonly></textarea>
+                        <button id="clear8add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 9-qo`shimcha.</span><br> Funksiya yozing, bu funksiya massiv ichidagi barcha elementlarni boshidan oxirigacha ketma-ket birlashtirib, bitta string qaytarsin.</h3>
+                    <input id="inputNum9-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num9-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result9Addition" readonly></textarea>
+                        <button id="clear9add">Clear</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3><span style="color: #fff;"> 10-qo`shimcha.</span><br> Funksiya yozing, bu funksiya massiv ichidagi sonlarning orasidagi eng katta farqni qaytarsin.</h3>
+                    <input id="inputNum10-addition" type="text" required placeholder="Sonlarni vergul bilan kiriting">
+                    <div class="result_text">
+                        <p>Result:</p>
+                        <button id="num10-addition">Ko`rish</button>
+                    </div>
+                    <div class="result">
+                        <textarea name="number" id="result10Addition" readonly></textarea>
+                        <button id="clear10add">Clear</button>
+                    </div>
+                </div>
+
             </div>
         </div>
 
